--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,8 +1,8 @@
-.hover-effect {
+/* .hover-effect {
     color: #fff;
-    margin: 7px 7px 10px 7px;
-    padding: 8px 6px; 
+    margin: 7px 3px 10px 3px;
     box-sizing: border-box; 
+    padding: 3px 3px;
     transition: all 0.3s ease; 
     font-size: 18px;
   }
@@ -28,4 +28,4 @@
     box-sizing: border-box; 
     transition: all 0.3s ease; 
     font-size: 18px;
-  }
+  } */
